Minor changes to ellaborate alt text and applied animation to social media links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="styleSheet.css" rel="stylesheet">
@@ -36,7 +37,7 @@
                     <div class="column">
                         <div class="column2-image1">
                             <div id="overlay">
-                                <img src="images/cn-tower.jpg" alt="cn tower" title="cn tower" class="images">
+                                <img src="images/cn-tower.jpg" alt="Toronto's cn tower from a street view" title="cn tower" class="images">
                                 <div class="middle3">
                                     <div class="text"><strong>The CN Tower</strong><br>One of the world's <br>tallest tower</div>
                                 </div>
@@ -44,7 +45,7 @@
                         </div>
                         <div class="column2-image2">
                             <div id="overlay">
-                                    <img src="images/rom.jpg" alt="Royal ontario museum" title="Royal ontario museum" class="images">
+                                    <img src="images/rom.jpg" alt="Elegant Royal ontario museum bottomup view from the street with a sky drop view behind" title="Royal ontario museum" class="images">
                                     <div class="middle4">
                                         <div class="text"><strong>Royal Ontario Museum</strong><br>Most Visited Museum <br>  in Canada</div>
                                     </div>
@@ -54,7 +55,7 @@
                     <div class="column">
                         <div class="column3-image1">
                             <div id="overlay">
-                                    <img src="images/rogers-center.jpg" alt="rogers center" title="rogers center" class="images">
+                                    <img src="images/rogers-center.jpg" alt="Bird's eye view of Rogers center field" title="rogers center" class="images">
                                     <div class="middle5">
                                         <div class="text"><strong>The Rogers Center</strong><br>Toronto's iconic <br>skydome</div>
                                     </div>
@@ -62,7 +63,7 @@
                         </div>
                         <div class="column3-image2">
                             <div id="overlay">
-                                    <img src="images/new-city-hall.jpg" alt="Toronto's new city hall building" title="Toronto's city hall" class="images">
+                                    <img src="images/new-city-hall.jpg" alt="Curvy Toronto's new city hall building bottomup view from the street" title="Toronto's city hall" class="images">
                                     <div class="middle6">
                                         <div class="text"><strong>Toronto City Hall</strong><br>A Brutalist Architecture <br> Masterpiece</div>
                                     </div>
